FE-1: Fix gap, scroll

--- a/src/assets/scss/layouts/_projects.scss
+++ b/src/assets/scss/layouts/_projects.scss
@@ -1,10 +1,11 @@
 .projects__list {
   @include mq(desktop) {
-    display: grid;
-    grid-template-columns: repeat(2, 505px);
-    justify-content: center;
-    row-gap: 60px;
-    column-gap: 128px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -128px;
+    margin-top: -60px;
+    padding-left: 51px;
+    padding-right: 51px;
   }
 }
 
@@ -19,6 +20,11 @@
 
   @include mq(tablet) {
     width: 505px;
+  }
+
+  @include mq(desktop) {
+    margin-left: 128px;
+    margin-top: 60px;
   }
 
   &:nth-child(2) {
@@ -99,17 +105,12 @@
 .projects__button {
   display: inline-flex;
   align-items: center;
-  gap: 20px;
 
   padding-left: 11px;
   border: 1px solid transparent;
   border-radius: 100px;
 
   transition: border  var(--animation-speed) var(--transition-timing-function);
-
-  @include mq(tablet) {
-    gap: 12px;
-  }
 
   &:hover {
     border: 1px solid var(--secondary-black-txt-cl);
@@ -124,10 +125,12 @@
   font-size: 16px;
   line-height: 1.62;
   white-space: nowrap;
+  margin-right: 20px;
 
   @include mq(tablet) {
     font-size: 18px;
     line-height: 1.44;
+    margin-right: 12px;
   }
 
   @include mq(desktop) {
